# polkit-qt-1

./: CMakeLists.txt  INSTALL  Mainpage.dox  PolkitQt5-1Config.cmake.in  README  README.porting  TODO  polkit-qt5-1.pc.cmake  polkit-qt5-agent-1.pc.cmake  polkit-qt5-core-1.pc.cmake  polkit-qt5-gui-1.pc.cmake  polkitqt1-export.h  polkitqt1-version.h.cmake
agent/: CMakeLists.txt  listeneradapter.cpp  listeneradapter_p.h  polkitqt1-agent-listener.cpp  polkitqt1-agent-listener.h  polkitqtlistener.cpp  polkitqtlistener_p.h
cmake/modules/: FindPolkitQt5-1.cmake  PolkitQt5-1Dist.cmake
core/: CMakeLists.txt  polkitqt1-actiondescription.cpp  polkitqt1-actiondescription.h  polkitqt1-authority.cpp  polkitqt1-authority.h  polkitqt1-details.cpp  polkitqt1-details.h  polkitqt1-identity.cpp  polkitqt1-identity.h  polkitqt1-subject.cpp
examples/: CMakeLists.txt
examples/agent/: CMakeLists.txt  klistener.cpp  klistener.h
gui/: CMakeLists.txt  polkitqt1-gui-action.cpp  polkitqt1-gui-action.h  polkitqt1-gui-actionbutton.cpp  polkitqt1-gui-actionbutton.h  polkitqt1-gui-actionbutton_p.h  polkitqt1-gui-actionbuttons.cpp  polkitqt1-gui-actionbuttons.h  polkitqt1-gui-actionbuttons_p.h
test/: CMakeLists.txt
